# KhoaLuanGG

./: README.md  README_step_create.md
calibrated_camera/: CMakeLists.txt  package.xml
calibrated_camera/launch/: csi_cam.launch
calibrated_camera/scripts/: csi_cam_node.py
devel/lib/gscam/: gscam  gscam_node
devel/lib/jetracer_camera_reader/: camera_reader  ssd_node
devel/lib/pkgconfig/: detect_image_node.pc  gscam.pc  jetracer_camera_reader.pc  jetson_csi_cam.pc  python_detect.pc  rplidar_ros.pc
devel/lib/rplidar_ros/: rplidarNode
devel/share/detect_image_node/cmake/: detect_image_nodeConfig.cmake
devel/share/gscam/cmake/: gscamConfig.cmake
devel/share/jetracer/cmake/: jetracerConfig.cmake
devel/share/jetracer_camera_reader/cmake/: jetracer_camera_readerConfig.cmake
devel/share/jetson_csi_cam/cmake/: jetson_csi_camConfig.cmake
devel/share/python_detect/cmake/: python_detectConfig.cmake
jetracer_camera_reader/: CMakeLists.txt
jetracer_camera_reader/src/: .ONNXDetector.cpp.swp  .camera_reader.cpp.swn  .camera_reader.cpp.swo  .camera_reader.cpp.swp  ONNXDetector.cpp  ONNXDetector.h  camera_reader.cpp  ssd_detector.cpp  ssd_detector.hpp  ssd_node.cpp  ~
python_detect_object/: CMakeLists.txt  package.xml
python_detect_object/scripts/: detect_object.py  image_utils.py  lidar_plot.py  lidar_plot_fixed.py  model_utils.py  read_scan.py  visualization.py
